@@ -16,6 +16,7 @@ Madhusudan C.S <madhusudancs@gmail.com>
 Marcelo Souza <m_souza@users.sourceforge.net>
 Missouga Dongi <zelea2@users.sourceforge.net>
 Pruneeth Bhat
+Kamaleshwar Morjal <kamaleshwar.morjal@gmail.com>
 
 Translators:
 ----------------------------
