@@ -2,7 +2,7 @@
 Name=GNUSim8085
 Comment=Intel 8085 microprocessor simulator
 Exec=gnusim8085
-Icon=@PACKAGE_PIXMAPS_DIR@/gnusim8085_icon.png
+Icon=@PACKAGE_PIXMAPS_DIR@/gnusim8085.svg
 Terminal=false
 Type=Application
 Categories=GNOME;GTK;Development;
