@@ -7,6 +7,6 @@
 gnusim8085_pixmapsdir = @PACKAGE_PIXMAPS_DIR@
 
 gnusim8085_pixmaps_DATA = \
-	gnusim8085_icon.png
+	gnusim8085.svg
 
 EXTRA_DIST = $(gnusim8085_pixmaps_DATA)
