@@ -265,7 +265,7 @@ create_window_main (void)
   gtk_window_set_title (GTK_WINDOW (window_main), _("GNUSim8085 - 8085 Microprocessor Simulator"));
   gtk_window_set_position (GTK_WINDOW (window_main), GTK_WIN_POS_CENTER);
   gtk_window_set_default_size (GTK_WINDOW (window_main), 500, 400);
-  window_main_icon_pixbuf = create_pixbuf ("gnusim8085_icon.png");
+  window_main_icon_pixbuf = create_pixbuf ("gnusim8085.svg");
   if (window_main_icon_pixbuf)
     {
       gtk_window_set_icon (GTK_WINDOW (window_main), window_main_icon_pixbuf);
@@ -1120,9 +1120,9 @@ create_dialog_about (void)
 
   if (!strcmp (translators, "translator_credits"))
     translators = NULL;
-  dialog_about_logo_pixbuf = create_pixbuf ("gnusim8085_icon.png");
+  dialog_about_logo_pixbuf = create_pixbuf ("gnusim8085.svg");
 
-  dialog_about_icon_pixbuf = create_pixbuf ("gnusim8085_icon.png");
+  dialog_about_icon_pixbuf = create_pixbuf ("gnusim8085.svg");
   gtk_show_about_dialog (NULL,
 						 "name", name,
 						 "version", VERSION,
@@ -1158,7 +1158,7 @@ create_window_listing (void)
   gtk_window_set_title (GTK_WINDOW (window_listing), _("Assembler Listing"));
   gtk_window_set_position (GTK_WINDOW (window_listing), GTK_WIN_POS_CENTER);
   gtk_window_set_default_size (GTK_WINDOW (window_listing), 500, 400);
-  window_listing_icon_pixbuf = create_pixbuf ("gnusim8085_icon.png");
+  window_listing_icon_pixbuf = create_pixbuf ("gnusim8085.svg");
   if (window_listing_icon_pixbuf)
     {
       gtk_window_set_icon (GTK_WINDOW (window_listing), window_listing_icon_pixbuf);
@@ -1228,7 +1228,7 @@ create_window_start (void)
   gtk_window_set_position (GTK_WINDOW (window_start), GTK_WIN_POS_CENTER);
   gtk_window_set_modal (GTK_WINDOW (window_start), TRUE);
   gtk_window_set_resizable (GTK_WINDOW (window_start), FALSE);
-  window_start_icon_pixbuf = create_pixbuf ("gnusim8085_icon.png");
+  window_start_icon_pixbuf = create_pixbuf ("gnusim8085.svg");
   if (window_start_icon_pixbuf)
     {
       gtk_window_set_icon (GTK_WINDOW (window_start), window_start_icon_pixbuf);
@@ -1368,7 +1368,7 @@ create_dialog_isymbol (void)
 												NULL);
   gtk_window_set_position (GTK_WINDOW (dialog_isymbol), GTK_WIN_POS_MOUSE);
   gtk_window_set_resizable (GTK_WINDOW (dialog_isymbol), FALSE);
-  dialog_isymbol_icon_pixbuf = create_pixbuf ("gnusim8085_icon.png");
+  dialog_isymbol_icon_pixbuf = create_pixbuf ("gnusim8085.svg");
   if (dialog_isymbol_icon_pixbuf)
     {
       gtk_window_set_icon (GTK_WINDOW (dialog_isymbol), dialog_isymbol_icon_pixbuf);
@@ -1513,7 +1513,7 @@ create_dialog_ireg (void)
 											 NULL);
   gtk_window_set_position (GTK_WINDOW (dialog_ireg), GTK_WIN_POS_MOUSE);
   gtk_window_set_resizable (GTK_WINDOW (dialog_ireg), FALSE);
-  dialog_ireg_icon_pixbuf = create_pixbuf ("gnusim8085_icon.png");
+  dialog_ireg_icon_pixbuf = create_pixbuf ("gnusim8085.svg");
   if (dialog_ireg_icon_pixbuf)
     {
       gtk_window_set_icon (GTK_WINDOW (dialog_ireg), dialog_ireg_icon_pixbuf);
