@@ -6,6 +6,7 @@ New:     Better looking installer. Multi-language interface and finish screen
 New:     The UI is now 'i18n'ized.
 New:     Experimental file handling with GIO APIs. Disabled by default.
          Use --enable-gio configure option.
+New:     New icon.
 Fix:     1847830 - Make the UI i18n enabled
 Fix:     1942893 - Assembler listing window is too narrow
 Fix:     2356534 - Basic File handling errors
